--- a/fsarv_proposal/FSARV_Research_Proposal_English.tex
+++ b/fsarv_proposal/FSARV_Research_Proposal_English.tex
@@ -22,7 +22,7 @@
 
 \pagestyle{fancy}
 \fancyhf{} 
-\fancyhead[L]{\textit{Industry-Ready Multilingual TTS Framework} }
+\fancyhead[L]{\textit{Few-Shot Action Recognition} }
 \fancyhead[R]{\textit{Masters Research Proposal}}
 \fancyfoot[C]{\thepage}
 
@@ -36,7 +36,7 @@
     \textit{ Research Proposal \\on}
 
     \HRule \\[0.3cm]
-    { \large \bfseries Industry-Ready Multilingual TTS Framework: Emotion-Aware Voice Synthesis for English, Bengali, and Chinese}\\[0.1cm] 
+    { \large \bfseries Few-Shot Action Recognition: Leveraging LLMs for Effective Data Augmentation on Video}\\[0.1cm] 
     \HRule \\[0.3cm]
 
 
@@ -74,6 +74,6 @@
 \end{document}
 
 % How to compile References with `biber`
-% 1. pdflatex file_name
+% 1. pdflatex file_name.tex
 % 2. biber file_name
-% 3. pdflatex file_name
+% 3. pdflatex file_name.tex
